FIX link to compbio@TrEE

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: All of us!
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  CompBio@TrEE: https://tree-timc.github.io/grant-2023-SIRIG/
+  CompBio@TrEE: https://tree-timc.github.io/compbio
 
 # --- Logo --- #
 
